Bug 562198: Namespace NSS & NSPR functions in ipc/chromium code, to avoid stomping on their Mozilla counterparts. r=bsmedberg