ipc/chromium/src/base/time.cc
@@ -9,6 +9,8 @@
 
 #include "base/logging.h"
 
+using namespace nspr;
+
 namespace base {
 
 // TimeDelta ------------------------------------------------------------------
